--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#contact</h1>
+<h1>Contact</h1>
 <p>Find me in app/views/pages/contact.html.erb</p>
+<p>
+  This is the home page for the<a href="http://railstutorial.org/feedback">feedback page</a>.
+</p>
